# hcomms

./: .gitignore  Cargo.toml  build.py  plans.md  readme.md  readme.md.bak  ui-plans.md
graphics/: icon.xcf
src/: gui.rs  main.rs
src/www/: computer.html  config.html  index.html  lan.html  main.js  style.css
